@@ -1,3 +1,10 @@
+2004-06-01 [christoph]
+
+	* src/maildir.c
+	* src/maildir_gtk.c
+		apply patch by Klaus Flittner <klaus_flittner@gmx.de>
+		adding support for FolderItem renaming
+
 2004-05-29 [christoph]
 
 	* src/plugin_gtk.c
